--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 					<p>
 						<img src="images/logos/Le_Monde_logo.svg" />
 					</p>
-					<h2><a href="huit.lemonde.fr">Démo</a></h2>
+					<h2><a href="http://huit.lemonde.fr">Démo</a></h2>
 				</section>
 			
 				<section>
