--- a/index.html
+++ b/index.html
@@ -449,6 +449,18 @@
 				</section>
 
 				<section>
+					<img src="images/ut-client-code.png"/>
+				</section>
+
+				<section>
+					<img src="images/test-e2e-code.png"/>
+				</section>
+
+				<section>
+					<img src="images/instagram/IMG_20141119_154543.jpg"/>
+				</section>
+
+				<section>
 					<img src="images/pratiques/e2e.png"/>
 				</section>
 
@@ -474,15 +486,29 @@
 			</section>
 
 			<section>
-				<img src="images/logos/AngularJS_logo_simp.svg" height="80"/>
-				<ul>
-					<li>Attention au SEO
-					<li>Attention aux perfs
-					<li>DI complexe, bootstrap
-					<li>gros concurrent qui monte : react (facebook)
-					<li>environnement front encore instable (ES6, polymer, web components…)
-					<li>AngularJS 2.0 proche
-				</ul>
+
+				<section>
+					<img src="images/logos/AngularJS_logo_simp.svg" height="80"/>
+					<ul>
+						<li>Attention au SEO
+						<li>Attention aux perfs
+						<li>DI complexe, bootstrap
+						<li>gros concurrent qui monte : react (facebook)
+						<li>environnement front encore instable (ES6, polymer, web components…)
+						<li>AngularJS 2.0 proche
+					</ul>
+				</section>
+
+				<section>
+					<h3>(liens)</h3>
+					<img src="images/logos/AngularJS_logo_simp.svg" height="80"/>
+					<ul>
+						<li><a target="_blank" href="http://eisenbergeffect.bluespire.com/all-about-angular-2-0/">All About Angular 2.0</a>
+						<li><a target="_blank" href="https://docs.google.com/presentation/d/1XQP0_NTzCUcFweauLlkZpbbhNVYbYy156oD--KLmXsk/preview?sle=true&slide=id.g498be00ed_028">Angular 2 Core</a>
+						<li><em>« While massive changes [about the web] have happened in the last couple of years, they pale in comparison to what's coming in the next 1-3 years » (</em><a target="_blank" href="http://eisenbergeffect.bluespire.com/all-about-angular-2-0/">Rob Eisenberg</a>)
+					</ul>
+				</section>
+
 			</section>
 
 			<section id="pratiques">
